retail-banking-app/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: retail-banking-istio-gateway
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - retail-banking.myatsumon.info
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - retail-banking.myatsumon.info
